appId: ${MAESTRO_APP_ID || "com.anonymous.privateexpo"}
---
- launchApp
- tapOn:
    text: 'Continue'
    optional: true
- tapOn:
    text: 'Close'
    optional: true
- tapOn: "Профиль"
- scrollUntilVisible:
    element:
      text: "Удаление аккаунта"
    direction: DOWN
- tapOn: "Удаление аккаунта"
- tapOn: "Удалить аккаунт и все данные"
- tapOn:
    text: "Удалить"
    index: 0
- assertVisible: "Аккаунт ожидает удаления"
