appId: ${MAESTRO_APP_ID || "engineering.brainwaves.sfera"}
---
- launchApp
- tapOn:
    text: 'Continue'
    optional: true
- tapOn:
    text: 'Close'
    optional: true
- runFlow:
    when:
      visible: 'сфера.'
    commands:
      - tapOn:
          id: 'e2e-auth-identifier'
      - assertVisible: ${E2E_EMAIL}
      - tapOn:
          id: 'e2e-auth-password'
      - inputText: ${E2E_PASSWORD}
      - back
      - tapOn:
          id: 'e2e-auth-switch-flow'
      - tapOn:
          id: 'e2e-auth-submit'
- extendedWaitUntil:
    visible: 'Аккаунт ожидает удаления'
    timeout: 120000
- tapOn: 'Восстановить аккаунт'
- assertVisible: 'Сегодня'
