appId: ${MAESTRO_APP_ID || "engineering.brainwaves.sfera"}
---
- back
- tapOn:
    id: 'e2e-auth-switch-flow'
- tapOn:
    id: 'e2e-auth-submit'
- extendedWaitUntil:
    visible:
      id: 'e2e-onboarding-next'
    timeout: 120000
